tests/paczka1/fuzzy1/71460864.err
Error in line 4: YbdUVeWP A387 16,0
Error in line 11: cpaSfqNiBqZ S453 24,2
Error in line 19: koJZ>s A38> 92,4
Error in line 24: S742 A505 82,22
Error in line 26: cpaSfqNiBqZ S433 76,3
Error in line 16: S742 A505 87,4
Error in line 36: YbdUVeWP A505 51,0
